--- a/.gitignore
+++ b/.gitignore
@@ -7868,3 +7868,21 @@ venv/Scripts/pythonw.exe
 venv/Scripts/sqlformat.exe
 venv/Scripts/watchmedo.exe
 venv/Scripts/wsdump.exe
+AyurvedicStoreProj/ayurstore_frontend/.gitignore
+AyurvedicStoreProj/ayurstore_frontend/package-lock.json
+AyurvedicStoreProj/ayurstore_frontend/package.json
+AyurvedicStoreProj/ayurstore_frontend/README.md
+AyurvedicStoreProj/ayurstore_frontend/public/favicon.ico
+AyurvedicStoreProj/ayurstore_frontend/public/index.html
+AyurvedicStoreProj/ayurstore_frontend/public/logo192.png
+AyurvedicStoreProj/ayurstore_frontend/public/logo512.png
+AyurvedicStoreProj/ayurstore_frontend/public/manifest.json
+AyurvedicStoreProj/ayurstore_frontend/public/robots.txt
+AyurvedicStoreProj/ayurstore_frontend/src/App.css
+AyurvedicStoreProj/ayurstore_frontend/src/App.js
+AyurvedicStoreProj/ayurstore_frontend/src/App.test.js
+AyurvedicStoreProj/ayurstore_frontend/src/index.css
+AyurvedicStoreProj/ayurstore_frontend/src/index.js
+AyurvedicStoreProj/ayurstore_frontend/src/logo.svg
+AyurvedicStoreProj/ayurstore_frontend/src/reportWebVitals.js
+AyurvedicStoreProj/ayurstore_frontend/src/setupTests.js
